--- a/presentation/src/main/res/layout/fragment_main.xml
+++ b/presentation/src/main/res/layout/fragment_main.xml
@@ -7,6 +7,9 @@
 
     <data>
 
+        <variable
+            name="vm"
+            type="com.fridgerescuer.presentation.views.main.MainViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -14,7 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".views.main.MainFragment"
-        android:background="@color/white">
+        android:background="@color/background">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
@@ -35,127 +38,231 @@
         </androidx.appcompat.widget.Toolbar>
 
         <FrameLayout
-            android:id="@+id/search_layout"
-            android:onClick="onButtonClicked"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginTop="0dp"
-            android:layout_marginBottom="12dp"
-            android:layout_marginRight="0dp"
-            android:layout_marginLeft="0dp"
-            app:layout_constraintDimensionRatio="H,8:1"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:background="@drawable/shape_main_layout_search" >
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/toolbar">
 
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/search_button"
-                android:onClick="onButtonClicked"
+            <com.fridgerescuer.presentation.utils.StickyScrollView
+                android:id="@+id/main_scroll_view"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="0dp"
-                android:layout_marginBottom="14dp"
-                android:layout_marginRight="12dp"
-                android:layout_marginLeft="12dp"
-                android:paddingStart="6dp"
-                android:background="@color/design_default_color_on_primary"
-                android:text="@string/main_search"
-                android:gravity="center_vertical"
-                android:textColor="@color/pale"
-                android:drawableStart="@drawable/ic_action_search_24dp"/>
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingBottom="12dp">
+
+                        <FrameLayout
+                            android:id="@+id/search_layout"
+                            android:onClick="onButtonClicked"
+                            android:layout_width="match_parent"
+                            android:layout_height="?attr/actionBarSize"
+                            android:layout_marginTop="0dp"
+                            android:layout_marginBottom="12dp"
+                            android:layout_marginRight="0dp"
+                            android:layout_marginLeft="0dp"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintRight_toRightOf="parent"
+                            app:layout_constraintLeft_toLeftOf="parent"
+                            android:background="@drawable/shape_main_layout_search" >
+
+                            <androidx.appcompat.widget.AppCompatButton
+                                android:id="@+id/search_button"
+                                android:onClick="onButtonClicked"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_marginTop="0dp"
+                                android:layout_marginBottom="14dp"
+                                android:layout_marginRight="12dp"
+                                android:layout_marginLeft="12dp"
+                                android:paddingStart="6dp"
+                                android:paddingEnd="6dp"
+                                android:background="@color/design_default_color_on_primary"
+                                android:text="@string/main_search"
+                                android:gravity="center_vertical"
+                                android:textColor="@color/pale"
+                                android:drawableStart="@drawable/ic_main_search_24dp"/>
+
+                        </FrameLayout>
+
+                        <androidx.appcompat.widget.AppCompatButton
+                            android:id="@+id/myfridge_button"
+                            android:onClick="onButtonClicked"
+                            android:layout_width="0dp"
+                            android:layout_height="0dp"
+                            android:layout_marginTop="12dp"
+                            android:layout_marginBottom="6dp"
+                            android:layout_marginStart="12dp"
+                            android:layout_marginEnd="4dp"
+                            android:elevation="8dp"
+                            app:layout_constraintDimensionRatio="H,1:1"
+                            app:layout_constraintTop_toBottomOf="@id/search_layout"
+                            app:layout_constraintRight_toLeftOf="@+id/recipe_button"
+                            app:layout_constraintLeft_toLeftOf="parent"
+                            android:background="@drawable/ripple_main_button_temp"
+                            android:text="@string/button_myfridge" />
+
+                        <androidx.appcompat.widget.AppCompatButton
+                            android:id="@+id/recipe_button"
+                            android:onClick="onButtonClicked"
+                            android:layout_width="0dp"
+                            android:layout_height="0dp"
+                            android:layout_marginTop="12dp"
+                            android:layout_marginBottom="8dp"
+                            android:layout_marginStart="4dp"
+                            android:layout_marginEnd="4dp"
+                            android:elevation="8dp"
+                            app:layout_constraintDimensionRatio="H,1:1"
+                            app:layout_constraintTop_toBottomOf="@id/search_layout"
+                            app:layout_constraintRight_toLeftOf="@id/diet_button"
+                            app:layout_constraintLeft_toRightOf="@id/myfridge_button"
+                            android:background="@drawable/ripple_main_button_temp"
+                            android:text="@string/button_recipe" />
+
+                        <androidx.appcompat.widget.AppCompatButton
+                            android:id="@+id/diet_button"
+                            android:onClick="onButtonClicked"
+                            android:layout_width="0dp"
+                            android:layout_height="0dp"
+                            android:layout_marginTop="12dp"
+                            android:layout_marginBottom="8dp"
+                            android:layout_marginStart="4dp"
+                            android:layout_marginEnd="12dp"
+                            android:elevation="8dp"
+                            app:layout_constraintDimensionRatio="H,1:1"
+                            app:layout_constraintTop_toBottomOf="@id/search_layout"
+                            app:layout_constraintRight_toRightOf="parent"
+                            app:layout_constraintLeft_toRightOf="@+id/recipe_button"
+                            android:background="@drawable/ripple_main_button_temp"
+                            android:text="@string/button_diet" />
+
+                        <androidx.constraintlayout.widget.ConstraintLayout
+                            android:id="@+id/ingr_layout"
+                            android:layout_width="match_parent"
+                            android:layout_height="0dp"
+                            android:layout_marginTop="8dp"
+                            android:layout_marginBottom="8dp"
+                            android:layout_marginRight="12dp"
+                            android:layout_marginLeft="12dp"
+                            android:elevation="8dp"
+                            app:layout_constraintDimensionRatio="H,14:3"
+                            app:layout_constraintTop_toBottomOf="@+id/myfridge_button"
+                            android:background="@drawable/shape_main_layout_ingr">
+
+                            <HorizontalScrollView
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:fillViewport="true"
+                                android:orientation="horizontal"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintEnd_toStartOf="@+id/add_layout">
+
+                                <LinearLayout
+                                    android:id="@+id/ingr_scroll_view"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="match_parent"
+                                    android:orientation="horizontal">
+
+                                </LinearLayout>
+
+                            </HorizontalScrollView>
+
+                            <FrameLayout
+                                android:id="@+id/add_layout"
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_gravity="end"
+                                app:layout_constraintDimensionRatio="H,3:2"
+                                app:layout_constraintTop_toTopOf="parent"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintRight_toRightOf="parent"
+                                android:background="@drawable/shape_main_button_add" >
+
+                                <ImageView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:src="@drawable/ic_main_add_24dp"
+                                    android:scaleType="centerInside"
+                                    android:contentDescription="@string/main_add_descriptor"/>
+
+                                <androidx.appcompat.widget.AppCompatButton
+                                    android:id="@+id/add_button"
+                                    android:onClick="onButtonClicked"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:background="?attr/selectableItemBackground" />
+
+                            </FrameLayout>
+
+                        </androidx.constraintlayout.widget.ConstraintLayout>
+
+                        <androidx.constraintlayout.widget.ConstraintLayout
+                            android:id="@+id/diet_info_layout"
+                            android:layout_width="match_parent"
+                            android:layout_height="0dp"
+                            android:layout_marginTop="8dp"
+                            android:layout_marginBottom="12dp"
+                            android:layout_marginRight="12dp"
+                            android:layout_marginLeft="12dp"
+                            android:elevation="8dp"
+                            app:layout_constraintDimensionRatio="H,7:4"
+                            app:layout_constraintTop_toBottomOf="@+id/ingr_layout"
+                            android:background="@drawable/shape_main_layout_ingr">
+
+                        </androidx.constraintlayout.widget.ConstraintLayout>
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                    <com.google.android.material.tabs.TabLayout
+                        android:id="@+id/scroll_tab_layout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@color/white" >
+
+                        <com.google.android.material.tabs.TabItem
+                            android:id="@+id/tab_main_dish"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/main_tab_main_dish" />
+
+                        <com.google.android.material.tabs.TabItem
+                            android:id="@+id/tab_side_dish"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/main_tab_side_dish" />
+
+                        <com.google.android.material.tabs.TabItem
+                            android:id="@+id/tab_conv"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/main_tab_conv" />
+
+                        <com.google.android.material.tabs.TabItem
+                            android:id="@+id/tab_dessert"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/main_tab_dessert" />
+
+                    </com.google.android.material.tabs.TabLayout>
+
+                    <androidx.viewpager2.widget.ViewPager2
+                        android:id="@+id/scroll_viewpager"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginBottom="50dp">
+
+                    </androidx.viewpager2.widget.ViewPager2>
+
+                </LinearLayout>
+
+            </com.fridgerescuer.presentation.utils.StickyScrollView>
 
         </FrameLayout>
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/myfridge_button"
-                android:onClick="onButtonClicked"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_marginTop="12dp"
-                android:layout_marginBottom="6dp"
-                android:layout_marginEnd="4dp"
-                android:layout_marginStart="12dp"
-                app:layout_constraintDimensionRatio="H,1:1"
-                app:layout_constraintTop_toBottomOf="@+id/search_layout"
-                app:layout_constraintRight_toLeftOf="@+id/recipe_button"
-                app:layout_constraintLeft_toLeftOf="parent"
-                android:background="@drawable/shape_main_button_temp"
-                android:text="@string/button_myfridge" />
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/recipe_button"
-                android:onClick="onButtonClicked"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_marginTop="12dp"
-                android:layout_marginBottom="8dp"
-                android:layout_marginEnd="12dp"
-                android:layout_marginStart="4dp"
-                app:layout_constraintDimensionRatio="H,1:1"
-                app:layout_constraintTop_toBottomOf="@+id/search_layout"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintLeft_toRightOf="@+id/myfridge_button"
-                android:background="@drawable/shape_main_button_temp"
-                android:text="@string/button_recipe" />
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/ingr_layout"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
-                android:layout_marginRight="12dp"
-                android:layout_marginLeft="12dp"
-                app:layout_constraintDimensionRatio="H,14:3"
-                app:layout_constraintTop_toBottomOf="@+id/myfridge_button"
-                android:background="@drawable/shape_main_layout_ingr">
-
-                <HorizontalScrollView
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:fillViewport="true"
-                    android:orientation="horizontal"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/add_layout">
-
-                    <LinearLayout
-                        android:id="@+id/ingr_container"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal">
-
-                    </LinearLayout>
-
-                </HorizontalScrollView>
-
-                <FrameLayout
-                    android:id="@+id/add_layout"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="right"
-                    app:layout_constraintDimensionRatio="H,3:2"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    android:background="@drawable/shape_main_button_add" >
-
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:src="@drawable/ic_main_add_24dp"
-                        android:scaleType="centerInside" />
-
-                    <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/add_button"
-                        android:onClick="onButtonClicked"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:background="@color/transparent" />
-
-                </FrameLayout>
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
