--- a/presentation/src/main/res/menu/toolbar_main.xml
+++ b/presentation/src/main/res/menu/toolbar_main.xml
@@ -4,15 +4,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/action_location"
-        android:title="@string/action_location"
-        android:icon="@drawable/ic_action_location_24dp"
+        android:id="@+id/toolbar_location"
+        android:title="@string/toolbar_location"
+        android:icon="@drawable/ic_toolbar_location_24dp"
         app:showAsAction="ifRoom" />
 
     <item
-        android:id="@+id/action_mypage"
-        android:title="@string/action_mypage"
-        android:icon="@drawable/ic_action_mypage_24dp"
+        android:id="@+id/toolbar_mypage"
+        android:title="@string/toolbar_mypage"
+        android:icon="@drawable/ic_toolbar_mypage_24dp"
         app:showAsAction="ifRoom" />
 
 </menu>
