--- a/presentation/src/main/res/values/colors.xml
+++ b/presentation/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
+    <color name="background">#FFDEE2E6</color>
     <color name="pale">#FF808080</color>
     <color name="transparent">#00ff0000</color>
     <color name="red">#FF900020</color>
